# deptt

./: .gitignore  ChangeLog.md  README.md  TODO.md  default.nix  package.yaml  shell.nix  stack.yaml
common/: .gitignore  TODO.md  common.cabal
common/examples/: plus.tt  plusn0.tt  real.tt  refl_across_apply.tt  setoid.tt  zero_not_eq_one.tt
common/src/: Deptt.hs  Elaborate.hs  Lib.hs  Normalize.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  SyntaxBuilder.hs  TypeCheck.hs  VarSupply.hs
common/src/Deptt/Bidirectional/: Normalize.hs  Syntax.hs  TypeCheck.hs
common/src/Deptt/Bidirectional/Syntax/: Builder.hs
common/src/Deptt/Core/: Lexer.x  Normalize.hs  Parser.hs  Parser.y  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
common/src/Deptt/Core/Normalize/: Level.hs
common/src/Deptt/Core/Syntax/: Builder.hs
common/src/Deptt/Core/TypeCheck/: Builtin.hs  Level.hs  Monad.hs
common/src/Deptt/Util/: VarSupply.hs
common/test/: Spec.hs
examples/: naturaldeduction.tt  plusn0.tt
frontend/: frontend.cabal
frontend/src/: Main.hs
src/: Lib.hs  Parser.hs  Syntax.hs  TypeCheck.hs
test/: Spec.hs
