cabal-version:       2.0

name:                common
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Daniël Louwrink
maintainer:          daniel.louwrink@gmail.com
-- copyright:
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     TypeCheck, Syntax, Parser, Lib, PrettyPrint
  -- other-modules:
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base
                     , mtl
                     , megaparsec
                     , parser-combinators
                     , containers
                     , prettyprinter
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
