cabal-version:       2.0

name:                common
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Daniël Louwrink
maintainer:          daniel.louwrink@gmail.com
-- copyright:
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Deptt.Core.TypeCheck
                     , Deptt.Core.Syntax
                     , Deptt.Core.Syntax.Builder
                     , Deptt
                     , Deptt.Core.Normalize
                     , Deptt.Util.VarSupply
                     , Deptt.Bidirectional.Syntax
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base
                     , mtl
                     , megaparsec
                     , parser-combinators
                     , containers
                     , prettyprinter
                     , text
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test
  main-is:          Spec.hs
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , common
                  , HUnit
                  , tasty
                  , tasty-hunit
                  , text
  ghc-options:      -Wall
  default-language: Haskell2010
