cabal-version:       2.0

name:                frontend
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Daniël Louwrink
maintainer:          daniel.louwrink@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable frontend
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , common
                     , reflex-dom
  hs-source-dirs:      src
  default-language:    Haskell2010
